# jben2_gui

./: .gitignore  COPYING.txt  CREDITS  INSTALL.txt  INSTALL_autoconf.txt  LICENSE  Makefile.am  README.txt  configure.ac  dialog_kanjilisteditor.py  dialog_preferences.py  dialog_vocablisteditor.py  jben.iss  jben.iss.in  jben.py  jben.xpm  jben_global.py  mixins.py  parser_kanjidic.py  preferences.py  setup.py  tab_kanjidict.py  tab_prefsfonts.py  tab_prefskanjidict.py  tab_prefskanjitest.py  tab_prefsother.py  tab_worddict.py  widget_hwpad.py  window_kanjihwsearch.py  window_main.py
c/kpengine/: Makefile.am  util.c
c/kpengine/data/: 01.unistrok  03.unistrok  06.unistrok  08.unistrok  12.unistrok  17.unistrok
data/: Makefile.am
data/kpdata/: 04.unistrok  07.unistrok  11.unistrok  16.unistrok  19.unistrok
images/: jben_48.xpm
jben/: CREDITS  MANIFEST.in  README.txt  app.py  configure.py.in  dict.py  dict_chooser.py  dict_downloader.py  jben.py  preferences.py  setup.py
jben/gui/: dialog_kanjilisteditor.py  dialog_vocablisteditor.py  tab_prefskanjidict.py  tab_prefskanjitest.py  tab_worddict.py  widget_hwpad.py  widget_storedsize.py  window_kanjihwsearch.py  window_main.py
jben/images/: jben_16.xpm
jben/interface/gtk/dialog/: dict_download_select.py  dict_mirror_select.py
jben/interface/gtk/widget/: __init__.py  hwpad.py  kanjidict.py  search_frame.py  worddict.py
jben/interface/gtk/window/: kanjihwsearch.py  main.py
jben/jben/: alphanum.py  app.py  console.py  dict.py  dict_chooser.py  dict_downloader.py  download_test.py  download_thread.py  global_refs.py  jben.py  jben_globals.py  main.py  preferences.py
jben/jben/gui/: dialog_kanjilisteditor.py  dialog_preferences.py  dict_manager.py  search_frame.py  tab_kanjidict.py  tab_prefsfonts.py  tab_prefsother.py  tab_worddict.py  widget_hwpad.py  widget_storedsize.py
jben/jben/gui/dialog/: kanjilisteditor.py  preferences.py  vocablisteditor.py
jben/jben/gui/dialog/preferences/: tab_prefsfonts.py  tab_prefskanjitest.py
jben/jben/gui/widget/: hwpad.py  infomessage.py  kanjidict.py  worddict.py
jben/jben/gui/window/: __init__.py  kanjihwsearch.py  main.py
jben/jben/interface/gtk/: __init__.py  dict_manager.py
jben/jben/interface/gtk/dialog/: __init__.py  dict_download.py  dict_download_select.py  dict_mirror_select.py
jben/jben/interface/gtk/dialog/preferences/: __init__.py  tab_prefsfonts.py  tab_prefskanjidict.py  tab_prefskanjitest.py  tab_prefsother.py
jben/jben/interface/gtk/widget/: kanjidict.py  search_frame.py  storedsize.py  worddict.py  yesnodialog.py
jben/jben/interface/gtk/window/: main.py
jben/parsers/: __init__.py  kanjidic.py
jben/parsers/tests/: __init__.py  edict.py  jmdict.py  kanjidic.py
jbparse/: COPYING.txt  README.txt  k2test.py  setup.py
jbparse/jbparse/: edict.py  jmdict.py  kanjidic.py  kanjidic2.py  kanjidic_common.py
jbparse/test/: __init__.py  kanjidic.py  kanjidic2.py
jbparse/tests/: edict.py  jmdict.py  kanjidic.py  kanjidic2.py
kpengine/: Makefile.am  jstroke.h  kpengine.c  scoring.c
kpengine/data/: 02.unistrok  05.unistrok  09.unistrok  10.unistrok  13.unistrok  14.unistrok  15.unistrok  18.unistrok  20.unistrok  21.unistrok  22.unistrok  23.unistrok
parsers/: edict.py  edict2.py  jmdict.py  kanjidic.py  kanjidic2.py  kanjidic_common.py
parsers/tests/: edict.py  jmdict.py  kanjidic.py  kanjidic2.py
po/: Makevars  POTFILES.in  fr.po  jben.pot
po/old/: README.txt  fr.po
python/: MANIFEST.in  Makefile.am  setup.py  unittest_coverage.py  unittest_main.py
python/data/images/: jben_32.xpm
python/jben/: app.py  configure.py.in  dict.py  dict_downloader.py  download_thread.py  jben_globals.py  main.py  preferences.py
python/jben/interface/console/: __init__.py
python/jben/interface/gtk/: __init__.py
python/jben/interface/gtk/dialog/: addkanjibyfreq.py  addkanjibyjlpt.py  addkanjibyjouyou.py  dict_download.py  dict_mirror_select.py  kanjilisteditor.py
python/jben/interface/gtk/dialog/preferences/: tab_prefsfonts.py  tab_prefskanjitest.py
python/jben/interface/gtk/widget/: comboboxtext.py  hwpad.py  kanjidict.py  storedsize.py
python/jben/interface/gtk/window/: kanjihwsearch.py  main.py
python/jben/test/: __init__.py  dict_downloader.py  test_dict.py  test_dict_downloader.py
python/po/: README.txt  create_mo_files.sh  update_po_files.sh
python/py2exe/: README.txt  jben.py
python/scripts/: jben_launcher.py
test/: __init__.py
