# Image data for J-Ben
imgdatadir = $(pkgdatadir)/images
dist_imgdata_DATA = \
	images/jben.xpm images/jben_16.xpm \
	images/jben_32.xpm images/jben_48.xpm

# Stroke data for kpengine
kpdatadir = $(pkgdatadir)/kpdata
dist_kpdata_DATA = \
	kpdata/01.unistrok kpdata/02.unistrok kpdata/03.unistrok \
	kpdata/04.unistrok kpdata/05.unistrok kpdata/06.unistrok \
	kpdata/07.unistrok kpdata/08.unistrok kpdata/09.unistrok \
	kpdata/10.unistrok kpdata/11.unistrok kpdata/12.unistrok \
	kpdata/13.unistrok kpdata/14.unistrok kpdata/15.unistrok \
	kpdata/16.unistrok kpdata/17.unistrok kpdata/18.unistrok \
	kpdata/19.unistrok kpdata/20.unistrok kpdata/21.unistrok \
	kpdata/22.unistrok kpdata/23.unistrok
