######################################################################
# For Python, we rely on setup.py for doing the right thing.  The    #
# targets here correspond to "make" and "make install" respectively, #
# and basically just function as passthroughs.                       #
######################################################################

# "build" seems unnecessary since "install" calls build again
# anyway...  So I'm commenting this out to save a little bit of build
# time.

#all-local:
#	python setup.py build

install-exec-local:
	python setup.py install
