bin_PROGRAMS = jben_kpengine
jben_kpengine_SOURCES = kpengine.c scoring.c util.c
jben_kpengine_CFLAGS = -DFOR_PILOT_COMPAT

kpdatadir = $(pkgdatadir)/kpdata
dist_kpdata_DATA = data/01.unistrok data/02.unistrok data/03.unistrok data/04.unistrok data/05.unistrok data/06.unistrok data/07.unistrok data/08.unistrok data/09.unistrok data/10.unistrok data/11.unistrok data/12.unistrok data/13.unistrok data/14.unistrok data/15.unistrok data/16.unistrok data/17.unistrok data/18.unistrok data/19.unistrok data/20.unistrok data/21.unistrok data/22.unistrok data/23.unistrok
